--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "node-fetch": "^3.3.1",
     "request": "^2.88.2",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0"
   }
 }
